--- a/SMU_Mapper/Properties/Resources.resx
+++ b/SMU_Mapper/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="AddChange" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AddChange.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="CreateAccesDatabase" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CreateAccesDatabase.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="MMLSchema" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\MML_Schema.xsd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
