--- a/SMU_Mapper/Properties/Resources.resx
+++ b/SMU_Mapper/Properties/Resources.resx
@@ -121,6 +121,12 @@
   <data name="AddChange" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\AddChange.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="Classes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Classes.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="CompileCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CompileCode.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="CreateAccesDatabase" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CreateAccesDatabase.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
